# AM-Nihoul-website

./: .bumpversion.cfg  .drone.yml  .gitignore  .jshintrc  .travis.yml  Gruntfile.js  Makefile  README.md  gulpfile.js  package-lock.json  package.json  pyproject.toml  release-it.sh  requirements-dev.txt  requirements.in  requirements.txt  setup.py
.github/workflows/: tests.yml
AM_Nihoul_website/: __init__.py  app_bootstrap.py  base_filters.py  base_model.py  base_views.py  bot.py  settings.py
AM_Nihoul_website/admin/: __init__.py  forms.py  utils.py  views.py
AM_Nihoul_website/assets/: editor.js  html-fix.js  main.js  style.less  style2.less
AM_Nihoul_website/migrations/: 1723319933_choice_is_back.py  1723325823_add_briefs.py  1723403409_add_summary.py  1723407615_add_visible_to_category.py  1723410891_add_featured.py  1723494407_remove_block.py  1731087850_summary.py  2c4ecefdb853_remove_position.py  2ece94d7b5e8_add_visibility_to_page.py  7ec03b1d7c82_add_email_attachements.py  83f79ad1fcb5_add_next_in_page.py  88c7a6ccef29_add_album_and_picture.py  aae11ed4ed1c_add_block.py
AM_Nihoul_website/pages/: __init__.py  models.py  views.py
AM_Nihoul_website/static/: style.css
AM_Nihoul_website/templates/: album.html  albums.html  base.ex.html  brief.html  briefs.html  helpers.inc.html  index.html  newsletter-in.html  newsletter-out.html  newsletter.html  newsletter.inc.html  newsletters.html  page.html  sitemap.xml
AM_Nihoul_website/tests/: __init__.py  test_menu.py  test_pages.py  (+8 more)
requirements/: requirements-base.in  requirements-bump.in  requirements.in
(+31 files in other folders)
