[project]
name = "AM-Nihoul-website"
version = '0.7.3'
authors = [
    {name = "Pierre Beaujean", email = "association.annemarienihoul@gmail.com"},
]
description = "AM-Nihoul-website, a small website for an association with not intent of being something else."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    'flask',
    'Flask-SQLAlchemy',
    'Flask-Uploads @ git+https://github.com/maxcountryman/flask-uploads.git@f66d7dc93e684fa0a3a4350a38e41ae00483a796',
    'sqlalchemy-utils',
    'python-slugify',
    'Flask-WTF',
    'email_validator',
    'Flask-Login',
    'Flask-APScheduler',
    'simplegmail>=3.0',
    'bootstrap-flask',
    'Flask-Alembic',
    'Flask-Limiter',
    'Pillow',
    'bs4'
]

[tool.setuptools]
packages = ['AM_Nihoul_website']
